--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -57,6 +57,7 @@
   "up": { "message": "move up" },
   "down": { "message": "move down" },
 
+  "disabled": { "message": "Disabled" },
 
 
   "name": { "message": "Name" },
