--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -14,7 +14,7 @@
   "log": { "message": "Log" },
   "myIP": { "message": "What's My IP?" },
   
-
+  "authError": { "message": "$1 is refusing connections:\n \u00A0\u2022 Check your proxy settings\n \u00A0\u2022 Contact your network administrator" },
   
   
   "delete": { "message": "Delete" },
@@ -48,8 +48,8 @@
   "editProxy": { "message": "Edit Proxy $1" },
   
   
-  "addEditPatterns": { "message": "Add/Edit Patterns" },
-  "addEditPatternsFor": { "message": "Add/Edit Patterns for $1" },
+  "editPatterns": { "message": "Edit Patterns" },
+  "editPatternsFor": { "message": "Edit Patterns of $1" },
   
   
   "errorWas": { "message": "There was an error. Please try again." },
@@ -61,7 +61,7 @@
   "importEndSlash": { "message": "Import finished. Slashes in patterns are not supported because of a Firefox bug. Please review your patterns and remove slashes, if any." },
 
   "errorPattern": { "message": "Please enter a pattern" },
-  "importBW": { "message": "Imported $1} white patterns and $2 black patterns." },
+  "importBW": { "message": "Imported $1 white and $2 black patterns." },
 
   "up": { "message": "move up" },
   "down": { "message": "move down" },
@@ -115,7 +115,6 @@
   
   "url": { "message": "URL" },
   "proxyTitle": { "message": "Proxy Title" },
-  "proxyColor": { "message": "Proxy Color" },
   "proxyAddress": { "message": "Proxy Address" },
   "matchPattern": { "message": "Match Pattern" },
   "timestamp": { "message": "Timestamp" }
