--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -74,7 +74,8 @@
   "disabled": { "message": "Disabled" },
   "active": { "message": "Enabled" },
 	"activeNote": { "message": "Enabling/Disabling patterns only affect FoxyProxy if you select "},
-
+  "noMatch": { "message": "No Match" },
+  "none": { "message": "None" },
 
   "name": { "message": "Name" },
   "pattern": { "message": "Pattern" },
