* Fixes so that FoxyProxy Basic can share the same codebase as FoxyProxy Standard again. Version number alignment: for the first time since FoxyProxy Basic   was introduced, it will share the same version number as FoxyProxy Standard. * Exported settings now include FoxyProxy edition &mdash; Standard or Basic. However, they are interchangeable. * Removed link to <a href="https://forums.getfoxyproxy.org/" target="_blank"><i class="fa fa-users"></i>Community Support Forums</a>.   We are shutting the forums down. People just don't use forums anymore; we only get spam there.   And have many other support chanels: email, ticket system, github, facebook, twitter, chat, etc. * Escape button works to close the current FoxyProxy window and return to the previous (if there is a previous). * Dialog box color changes for consistency

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -111,6 +111,7 @@
   "patternHelp": { "message": "Pattern Help" },
   "welcome": { "message": "Welcome" },
   "options": { "message": "Options" },
+  "optionsPage": { "message": "FoxyProxy Options" },
   "enterUrl": { "message": "Enter URL to test" },
   "enterUrlNote": { "message": "(paths and query parameters are ignored)" },
   "patternDetail": { "message": "Enter pattern details." },
