* When adding a new proxy, <strong>Add whitelist pattern to match all URLs</strong> is now on by default. Discussed <a href="https://github.com/foxyproxy/firefox-extension/issues/49" target="_blank">here</a>. * On patterns window, added button for <strong>Add whitelist pattern to match all URLs</strong> similar to the existing button <strong>Add black patterns to prevent this proxy being used for localhost & intranet/private IP addresses</strong>. * Patterns Cheat Sheet improvements &mdash; more examples and text explaining that blacklist patterns take precedence over whitelist patterns. * Change an i18n key name so it works in chrome, too (chrome does not allow periods in key names). * Remove unneeded console log messages. * Faster deletion of patterns (faster animation)

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -150,5 +150,9 @@
   "proxyTitle": { "message": "Proxy Title" },
   "proxyAddress": { "message": "Proxy Address" },
   "matchPattern": { "message": "Match Pattern" },
-  "timestamp": { "message": "Timestamp" }
+  "whiteBlack": { "message": "White/Black" },
+  "white": { "message": "White" },
+  "black": { "message": "Black" },
+  "timestamp": { "message": "Timestamp" },
+  "notApplicable": {"message": "n/a"}
 } 
