--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -154,5 +154,7 @@
   "white": { "message": "White" },
   "black": { "message": "Black" },
   "timestamp": { "message": "Timestamp" },
-  "notApplicable": {"message": "n/a"}
+  "notApplicable": {"message": "n/a"},
+  "matchedURLs": {"message": "URLs That Matched Patterns"},
+  "unmatchedURLs": {"message": "URLs That Did Not Match Patterns"}
 } 
